package com.compiler.semantic.model;

public class CompileRequest {
    private String code;

    public String getCode() { return code; }
    public void setCode(String code) { this.code = code; }
}
